--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0966)https://00e9e64bace5ef111fa1ac8093e6702e2b44ec3dd39d41e9e8-apidata.googleusercontent.com/download/storage/v1/b/tokestrs.com.br/o/index.html?qk=AD5uMEspbYJQ0JvX5uxEsGmg8nqRqmSl4ZFsIvEd0iAJeWse8B6BNF6wVugL3ZFSONF0bgZ515YHCrjHfh1uw2_J65PqX3_xkzayip9_zM8vMp6wY1rKmF1B9WJdXXgWSKS7YWUSpayL1IlV9g6L_Sg0YExP0Ilqv2b3J_uzYc1OmTKDyvnnSBJL95LiNWPqRmwDAXe3T5kRHS1mjsY9uCpy1stuMqG3k91ChZAAaLH8HlfWXym-SFHXD0qnwBnqS7TsfJLPCSLpWI2GJSp1AEBfwGtRb25KG8U42vNzE4Z2Hq8m1hSoWaUcXRJeb_ETiFqB0_5k43Jq3ItFxDjQcPj123nNmEgYlYgIohp_uTK27X9G8W4QH3Wu_0ZDDFAVxMobH4nKCEjzD7aD0WqLo4UzjbZW4KCU6UJGW6O0qpuVYNjpKv0qFQ80pqKdfqeaT_vcg-uQhpMRv97w0zA5-EPAcpDLBXzfefeLrAXcP3htBnJ-QZ0WDx2BMaotC2YqvIQqK_P3U0UgdiGe1E3uaVXf8UetMbFUg755gVv4gdCBlAFUZRC6NjuoRBM5ECIfPNRosGvDqG-ziGzppqMv-quAkO5hgPiHot_soaTkyWazXmsj7z9sFISEaiz6o7ZeDQdZSVeq1DvZQXAwcO3-gW7HRjdENlaaDiHOTbPl0C3IVN-Br9zUohYa62vroKelyCNzxFFaXRm1HZQFpn2emsDYif8JnJzN1y-Qgga47YLSWOGuZrxBA1JrYknogN4dCj-4Qgb03bOXN1_1y4aFiR_06fGtLN-aU8GKe9uf3ol5fwXdDUx9o7M -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Tokest Porto Alegre</title>
 	<style type="text/css">
@@ -38,11 +37,11 @@
 		}
 	
 	</style>
-<meta id="acfifjfajpekbmhmjppnmmjgmhjkildl"></head>
+
 <body>
 
 		<div id="tokestSul">
-			<img src="./index_files/logoTokest.png"><br>
+			<img src="logoTokest.png"><br>
 			Porto Alegre
 		</div>
 		<div id="contato">
