--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		</div>
 		<div id="contato">
 			(51) 994076046<br>
-			vendas@tokestsrs.com.br
+			vendas@tokestrs.com.br
 		</div>
 
 </body></html>
